# eigen_examples

./: .gitignore  CMakeLists.txt  README.md
basic_concepts/: CMakeLists.txt  autodiff.cc  basic_concepts.kdev4  broadcast.cc  complex.cpp  contraction.cpp  function.cc  init.cpp  layout.cpp  reduction.cpp  representation.cpp  slice.cc  tensorref.cpp  test_cast.cc
basic_concepts/.kdev4/: basic_concepts.kdev4
ch01/: main.cc
ch03/: CMakeLists.txt  main.cc
eigen_matrix/: CMakeLists.txt  io.cc
slice/: CMakeLists.txt  main.cc
